--- a/PowerwallCompanion/PowerwallCompanion.csproj
+++ b/PowerwallCompanion/PowerwallCompanion.csproj
@@ -13,13 +13,12 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.19041.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.15063.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>
-    </PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>PowerwallCompanion_TemporaryKey.pfx</PackageCertificateKeyFile>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
@@ -28,7 +27,7 @@
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
-    <PackageCertificateThumbprint>2BC7AE7C0D94AFC46753C4C7B2AAD9D0C2F53D61</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>4F4C00162B8DE08402ED553C444874777CE0203E</PackageCertificateThumbprint>
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
     <AppInstallerUpdateFrequency>0</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
@@ -125,8 +124,6 @@
     </Compile>
     <Compile Include="Converters\BatteryPercentageConverter.cs" />
     <Compile Include="Converters\DecimalConverter.cs" />
-    <Compile Include="Converters\KilowattHourConverter.cs" />
-    <Compile Include="Converters\NegateVisiblityConverter.cs" />
     <Compile Include="Converters\PercentageToGridWidthConverter.cs" />
     <Compile Include="Converters\HideGridRowConverter.cs" />
     <Compile Include="Converters\KilowattConverter.cs" />
@@ -140,12 +137,6 @@
     <Compile Include="Converters\StatusConverter.cs" />
     <Compile Include="Converters\VisibilityCollapsedLessThan5Converter.cs" />
     <Compile Include="Converters\VisibilityCollapsedLessThan10Converter.cs" />
-    <Compile Include="DownloadWebViewPage.xaml.cs">
-      <DependentUpon>DownloadWebViewPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="EnergyPage.xaml.cs">
-      <DependentUpon>EnergyPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
@@ -160,42 +151,30 @@
     <Compile Include="SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TeslaAuth\HTTPUtility.cs" />
+    <Compile Include="TeslaAuth\LoginInfo.cs" />
+    <Compile Include="TeslaAuth\Tokens.cs" />
+    <Compile Include="TeslaAuth\TeslaAuthHelper.cs" />
     <Compile Include="ViewModels\BatteryHistoryViewModel.cs" />
     <Compile Include="ViewModels\ChartViewModel.cs" />
-    <Compile Include="ViewModels\EnergyViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
-    <Compile Include="WebView2Install.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <Content Include="Assets\EnergyIcon.png" />
-    <Content Include="Assets\icon_battery.png" />
-    <Content Include="Assets\icon_battery_export.png" />
-    <Content Include="Assets\icon_battery_import.png" />
-    <Content Include="Assets\icon_grid.png" />
-    <Content Include="Assets\icon_grid_export.png" />
-    <Content Include="Assets\icon_grid_import.png" />
-    <Content Include="Assets\icon_home.png" />
-    <Content Include="Assets\icon_solar.png" />
     <Content Include="DemoData\SelfConsumptionHistory.json" />
     <Content Include="DemoData\LiveStatus.json" />
     <Content Include="DemoData\PowerHistory.json" />
     <Content Include="DemoData\EnergyHistoryMonth.json" />
     <Content Include="DemoData\EnergyHistoryWeek.json" />
     <Content Include="DemoData\EnergyHistoryYear.json" />
-    <Content Include="DemoData\Products.json" />
-    <Content Include="DemoData\EnergyHistory.json" />
-    <None Include="PowerwallCompanion_StoreKey.pfx" />
-    <None Include="PowerwallCompanion_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\ChartIcon.png" />
     <Content Include="Assets\Hamburger.png" />
     <Content Include="Assets\TeslaLogo.png" />
-    <None Include="Package.StoreAssociation.xml" />
     <Content Include="PowerwallCompanionPrivacyPolicy.txt" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -219,14 +198,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="DownloadWebViewPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="EnergyPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="HomePage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -246,28 +217,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.13</Version>
+      <Version>6.0.6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>7.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.8.0-prerelease.220118001</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Web.WebView2">
-      <Version>1.0.1189-prerelease</Version>
+      <Version>2.1.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.1</Version>
+      <Version>11.0.1</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http">
-      <Version>4.3.4</Version>
+      <Version>4.3.3</Version>
     </PackageReference>
     <PackageReference Include="System.Security.Cryptography.Algorithms">
       <Version>4.3.1</Version>
-    </PackageReference>
-    <PackageReference Include="TeslaAuth">
-      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="WinRTXamlToolkit.Controls.DataVisualization">
       <Version>2.3.0</Version>
@@ -277,6 +239,9 @@
     <SDKReference Include="WindowsMobile, Version=10.0.19041.0">
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="PowerwallCompanion_TemporaryKey.pfx" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
